# OCR_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
